[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/principalFaceis.gd" type="Script" id=1]
[ext_resource path="res://imagens/icon.png" type="Texture" id=2]
[ext_resource path="res://cenas/PerguntasFaceis.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://videos/Banana.ogv" type="VideoStream" id=5]
[ext_resource path="res://fonts/JandaCurlygirlChunky.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://imagens/logo.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 4
outline_color = Color( 0.0196078, 0.00392157, 0.00392157, 1 )
extra_spacing_char = 1
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
botao1Path = NodePath("Botões/Fruta 1")
botao2Path = NodePath("Botões/Fruta 2")
placarPath = NodePath("placar")
videoFrutaPath = NodePath("VideoFruta")
fruta1Path = NodePath("Botões/Fruta 1/SpriteFruta1")
fruta2Path = NodePath("Botões/Fruta 2/SpriteFruta2")
perguntasFaceisPath = NodePath("PerguntasFaceis")
timerPath = NodePath("timer")

[node name="Botões" type="CanvasLayer" parent="."]

[node name="Fruta 1" type="Button" parent="Botões"]
margin_left = 552.813
margin_top = 235.067
margin_right = 752.813
margin_bottom = 385.067
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="SpriteFruta1" type="Sprite" parent="Botões/Fruta 1"]
texture = ExtResource( 2 )
centered = false

[node name="Fruta 2" type="Button" parent="Botões"]
margin_left = 789.227
margin_top = 238.253
margin_right = 989.227
margin_bottom = 388.253

[node name="SpriteFruta2" type="Sprite" parent="Botões/Fruta 2"]
texture = ExtResource( 2 )
centered = false

[node name="timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PerguntasFaceis" parent="." instance=ExtResource( 3 )]

[node name="Background" parent="." instance=ExtResource( 4 )]
layer = -1

[node name="VideoFruta" type="VideoPlayer" parent="."]
margin_left = 138.0
margin_top = 582.0
margin_right = 619.0
margin_bottom = 852.0
rect_rotation = 270.0
stream = ExtResource( 5 )
autoplay = true

[node name="placar" type="RichTextLabel" parent="."]
margin_left = 580.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 1 )
text = " Pontuação : 0"
scroll_active = false

[node name="Logo" type="TextureRect" parent="."]
margin_left = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
[connection signal="button_up" from="Botões/Fruta 1" to="." method="_on_Fruta_1_button_up"]
[connection signal="button_up" from="Botões/Fruta 2" to="." method="_on_Fruta_2_button_up"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="VideoFruta" to="." method="_on_VideoFruta_finished"]
